# coqc-expand-errors

./: CHANGELOG.md  LICENSE  README.md  coqc-expand-errors.cabal  stack.yaml
README/: triples.v
src/exe/: Main.hs
src/lib/: CoqcExpandErrors.hs
src/lib/CoqcExpandErrors/: CLI.hs  CoqFile.hs  Types.hs
src/lib/CoqcExpandErrors/Parse/: CoqDefinitions.hs  CoqcErrors.hs
src/lib/CoqcExpandErrors/Pipes/: Report.hs
src/lib/CoqcExpandErrors/Text/: Divvy.hs
src/lib/CoqcExpandErrors/Util/: Common.hs  Megaparsec.hs  Num.hs  Pipes.hs  Vector.hs
